2022-06-18  Jay Berkenbilt  <ejb@ql.org>

        * When --progress or --verbose is combined with writing to
        standard output, progress reporting and verbose messages go to
        standard error. Previously it was disabled in this case.

2022-06-05  Jay Berkenbilt  <ejb@ql.org>

        * QPDFJob: API breaking change: QPDFJob::doIfVerbose passes a
        Pipeline& rather than a std::ostream& to the the callback
        function.

        * Add integer types to pipeline's operator<<: short, int, long,
        long long, unsigned short, unsigned int, unsigned long, unsigned
        long long.

2022-05-30  Jay Berkenbilt  <ejb@ql.org>

        * qpdf JSON is now at version 2. New command-line arguments:
        --json-output, --json-input, --update-from-json. New methods
        QPDF::writeJSON, QPDF::createFromJSON, QPDF::updateFromJSON. For
        details, see the "qpdf JSON" chapter of the manual.

        * When showing encryption data in json output, when the user
        password was recovered with by the owner password and the
        specified password does not match the user password, reveal the
        user password. This is not possible with 256-bit keys.

        * Include additional information in --list-attachments --verbose
        and in --json --json-key=attachments.

        * Add QUtil::qpdf_time_to_iso8601 and QUtil::pdf_time_to_iso8601
        for converting PDF/qpdf timestamps to ISO-8601 date format.

2022-05-18  Jay Berkenbilt  <ejb@ql.org>

        * Add QUtil::FileCloser to the public API. This is a simple inline
        class to help with automatic file closing.

2022-05-17  Jay Berkenbilt  <ejb@ql.org>

        * Allow passing *uninitialized* (not null) objects to
        replaceStreamData as filter and/or decode_parms to leave any
        existing values for /Filter and /DecodeParms untouched.

2022-05-15  Jay Berkenbilt  <ejb@ql.org>

        * Add QUtil::is_long_long to test whether a string can be